--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^4.0.0-beta.5",
     "jest": "^24.8.0",
     "jest-serializer-vue": "^0.3.0",
     "nightwatch": "^1.1.11",
