--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^1.1.2",
     "vue-jest": "^1.0.2",
-    "vue-loader": "14.2.2",
+    "vue-loader": "^15.7.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^4.10.2",
